fix: update string to list function (input view) allow blank name